# gamejam2024

./: Cargo.toml
.github/workflows/: ci.yaml  release.yaml
assets/: Background.jpg.old
docs/: bevy_game.js
docs/assets/: frijol_rojo.glb
page/: bevy_game.js
page/assets/: frijol_amarillo.glb  run.glb
src/: assets.rs  audio.rs  background.rs  constants.rs  hud.rs  main.rs  plugin.rs
